# CudaMandel

./: CMakeLists.txt  constants.cuh  main.cu  mandelbrot.cu  mandelbrot.cuh  png.cu  png.cuh
